--- a/progmentrum/index.html
+++ b/progmentrum/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Progmentum</title>
 </head>
+    <canvas id ='q'></canvas>
+
 
 <body>
     <header class="header">
