update:fitcher time(and date)  ready

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Progmentum</title>
 </head>
-    <canvas id ='q'></canvas>
+<canvas id='q'></canvas>
 
 
 <body>
@@ -39,8 +39,8 @@
             <button class="slide-prev slider-icon"></button>
             <button class="slide-next slider-icon"></button>
         </div>
-        <time class="time"></time>
-        <date class="date"></date>
+        <time id="time" class="time"></time>
+        <date id="date" class="date"></date>
         <div class="greeting-container">
             <span class="greeting"></span>
             <input type="text" class="name" />
