--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <date id="date" class="date"></date>
         <div class="greeting-container">
             <span class="greeting"></span>
-            <input type="text" class="name" />
+            <input type="text" class="name" placeholder="[Enter name]" />
         </div>
     </main>
     <footer class="footer">
