update:add weather

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
             </div>
             <ul class="play-list"></ul>
         </div>
-        <div class="weather">
+        <div class="weather ">
             <input type="text" class="city" />
             <i class="weather-icon owf"></i>
             <div class="weather-error"></div>
-            <div class="description-container">
-                <span class="temperature"></span>
-                <span class="weather-description"></span>
+            <div class="description-container color-w">
+                <span class="temperature color-w"></span>
+                <span class="weather-description color-w"></span>
             </div>
             <div class="wind"></div>
             <div class="humidity"></div>
         </div>
     </header>
     <main class="main">
-        <div class="slider-icons">
+        <!-- <div class="slider-icons">
             <button class="slide-prev slider-icon"></button>
             <button class="slide-next slider-icon"></button>
-        </div>
+        </div> -->
         <time id="time" class="time"></time>
         <date id="date" class="date"></date>
         <div class="greeting-container">
@@ -57,3 +57,5 @@
 </body>
 
 </html>
+
+https://api.openweathermap.org/data/2.5/weather?q=Москва&lang=en&appid=df940439995b4c2ae3d3172ccc48f414&units=metric
